--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,5 +11,7 @@
     <string name="price">Price in EUR</string>
     <string name="description">Book description</string>
     <string name="save">Save</string>
+    <string name="action_edit">Edit</string>
+    <string name="action_delete">Delete</string>
 
 </resources>
